# gumol-viz-engine

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  GPU_OPTIMIZATION_SUMMARY.md  LICENSE  README.md  demo_trajectory.xyz  standalone_gro_test.rs  test_gro_parser.rs
.github/workflows/: ci.yml
assets/shaders/: atom_interpolate.wgsl  instanced_atom.wgsl
benches/: baseline.json  bonds.rs  common.rs  loading.rs  parsing.rs  rendering.rs
docs/: ARCHITECTURE.md  BUILD_OUT_ROADMAP.md  DEVELOPMENT_PLAN.md  GPU_PERFORMANCE_ANALYSIS.md  OPTIMIZATION_CODE_EXAMPLES.md  OPTIMIZATION_PROGRESS.md  PLAN_SUMMARY.md  PROFILING.md  PROJECT_README.md  QUICK_START_OPTIMIZATION.md  SECONDARY_FORMATS.md  SETUP.md  VALIDATION.md  activity.md  goal_load_gro_files.md  gro_format_specification.md  gro_loading_guide.md  gro_parser_reference.md  phase1_secondary_formats.md  phase1_summary.md
docs/plan/: 00-INDEX.md  01-CRITICAL-FIXES.md  02-INSTANCED-RENDERING-PIPELINE.md  03-BONDS-AND-TOPOLOGY.md  04-FILE-IO-AND-FORMATS.md  05-TIMELINE-AND-ANIMATION.md  06-INTERACTION-SELECTION-MEASUREMENT.md  07-UI-AND-UX.md  08-VISUALIZATION-MODES.md  09-EXPORT.md  10-PERFORMANCE-OPTIMIZATION.md  11-ADVANCED-FEATURES.md  12-TESTING-CI-AND-TEAM-WORKFLOW.md
examples/: alanine.gro  basic_load.rs  interactive_selection.rs  pdb_viewer.rs  perf_100k.rs  timeline_demo.rs  water.cif  water.gro  xyz_viewer.rs
scripts/: check_bench_regression.py  generate_100k_fixture.sh  profile_100k_playback.sh  profile_100k_static.sh
src/: lib.rs  main.rs
src/analysis/: dssp.rs  mod.rs
src/camera/: mod.rs
src/core/: atom.rs  bond.rs  mod.rs  molecule.rs  secondary_structure.rs  trajectory.rs  visualization.rs
src/export/: gltf_export.rs  mesh_export.rs  mod.rs  obj.rs  povray.rs  scene_snapshot.rs  screenshot.rs  video.rs
src/interaction/: box_selection.rs  measurement.rs  mod.rs  pick_proxy.rs  selection.rs  selection.rs.bak
src/io/: dcd.rs  gro.rs  mmcif.rs  mod.rs  pdb.rs  pdb_mmap.rs  streaming.rs  topology.rs  xyz.rs  xyz_parallel.rs  xyz_stream.rs
src/performance/: fps.rs  memory.rs  mod.rs
src/ui/: mod.rs  (+4 more)
tasks/: todo.md
tests/: e2e_secondary_formats.rs  sprint1_validation.rs  sprint5_validation.rs  sprint6_validation.rs  sprint7_validation.rs  test_dcd_load.rs  test_format_detection.rs  test_gro_load.rs  test_load_pipeline.rs  test_mmcif_load.rs  test_pdb_load.rs  test_plugin_registration.rs  test_xyz_load.rs
(+28 files in other folders)
